JBTM-3482:Build Narayana using JDK 17